add redux, thunk, before oauth

--- a/argon-client/public/index.html
+++ b/argon-client/public/index.html
@@ -42,6 +42,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
+    <!-- <script type="text/javascript" src="./../src/utils/helper.js"></script> -->
+    
     <title>Argon Dashboard React by Creative Tim</title>
   </head>
   <body>
