--- a/argon-client/public/index.html
+++ b/argon-client/public/index.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <!-- <script type="text/javascript" src="./../src/utils/helper.js"></script> -->
     <script src="https://apis.google.com/js/api.js"></script>
-    <title>Argon Dashboard React by Creative Tim</title>
+    <title>Asset Farm</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
